@@ -44,6 +44,7 @@ Changelog
  * Fix: Accept unicode characters in slugs on the "copy page" form (François Poulain)
  * Fix: Remove top padding when `FieldRowPanel` is used inside a `MultiFieldPanel` (Jérôme Lebleu)
  * Fix: Add Wagtail User Bar back to page previews and ensure moderation actions are available (Coen van der Kamp)
+ * Fix: Resolve issue where queryset annotations were lost (e.g. `.annotate_score()`) when using specific models in page query (Dan Bentley)
 
 
 2.9 (04.05.2020)
